Added mouse emulation

--- a/config/boards/arm/cyber60_rev_d/cyber60_rev_d_defconfig
+++ b/config/boards/arm/cyber60_rev_d/cyber60_rev_d_defconfig
@@ -47,3 +47,6 @@ CONFIG_PINCTRL=y
 # Turn on logging, and set ZMK logging to debug output
 CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
 CONFIG_ZMK_USB_LOGGING=y
+
+# Turn on mouse emulation behaviors
+CONFIG_ZMK_MOUSE=y
