--- a/config/west.yml
+++ b/config/west.yml
@@ -5,8 +5,12 @@ manifest:
     - name: ftc
       url-base: https://github.com/ftc
   projects:
-    - name: zmk
-      remote: zmkfirmware
+    # - name: zmk
+    #   remote: zmkfirmware
+    #   revision: main
+    #   import: app/west.yml
+    - name: smk
+      remote: urob
       revision: main
       import: app/west.yml
   self:
