--- a/config/west.yml
+++ b/config/west.yml
@@ -9,7 +9,7 @@ manifest:
     #   remote: zmkfirmware
     #   revision: main
     #   import: app/west.yml
-    - name: smk
+    - name: zmk
       remote: urob
       revision: main
       import: app/west.yml
